--- a/index.html
+++ b/index.html
@@ -91,15 +91,192 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                     bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
                     justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-                    penatibus et magnis dis parturient montes.
+                    penatibus et magnis dis parturient montes.</p>
 
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-                    bibendum laoreet.</p></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                    bibendum laoreet.</p>
+                <a href="#" class="button">Download</a>
             </div>
 
-            <a href="#" class="button">Download</a>
+            <img src="./img/tabs.png" alt="Домик">
         </div>
+    </section>
+
+    <section id="sublist">
+        <div class="container">
+            <div class="sublisttitle">
+                <img src="./img/image_left_sub_list_u260 copy.png" alt="картинка" class="picture">
+                <div class="sublistsection">
+                    <h2 class="title">Sub list section</h2>
+                    <div class="line"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                        accumsan et viverra justo commodo.
+                    </p>
+
+                    <div class="advantages_list">
+                        <div class="item">
+                            <img src="./img/.png/" alt="">
+                            <div class="content">
+                                <span>Title</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod bibendum laoreet.</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="./img/5.png" alt="">
+                            <div class="content">
+                                <span>Title</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod bibendum laoreet. Proin gravida dolor
+                                    sit amet lacus accumsan et viverra justo commodo.</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        </div>
+
+        </div>
+    </section>
+
+    <section id="picture">
+        <div class="container">
+            <div class="section">
+                <span>Standard Picture Section</span>
+                <div class="line"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                    euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+                    et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
+                    natoque penatibus et magnis dis parturient montes.
+                    bibendum laoreet.
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod</p>
+                </p>
+
+            </div>
+            <div class="section_photo">
+                <img src="./img/image_left_sub_list_u260 copy.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section id="advantages">
+        <div class="container">
+            <div class="title">
+                <h3>WHY THIS IS AWESOME</h3>
+                <div class="line"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="advantages_list">
+                <div class="advantages_item">
+                    <img src="./img/1.png" alt="">
+                    <h3>Thoughtful Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Aenean euismod bibendum laoreet. Proin gravida
+                        dolor sit amet lacus accumsan et viverra.</p>
+                </div>
+
+                <div class="advantages_item">
+                    <img src="./img/2.png" alt="">
+                    <h3>Well Crafted</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Aenean euismod bibendum laoreet. Proin gravida
+                        dolor sit amet lacus accumsan et viverra.</p>
+                </div>
+
+                <div class="advantages_item">
+                    <img src="./img/3.png" alt="">
+                    <h3>Easy to Customize</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Aenean euismod bibendum laoreet. Proin gravida
+                        dolor sit amet lacus accumsan et viverra.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="price">
+        <div class="container">
+            <div class="title">
+                <h3>PRICING OPTIONS</h3>
+                <div class="line"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="price_options">
+                <div class="price_item">
+                    <div class="price_item_block">
+                        <h3>Basic</h3>
+                        <div class="price_line"></div>
+                        <span>
+                            <span class="currency">
+                                $
+                            </span>
+                            0
+                        </span>
+                        <p>Free for Life</p>
+                        <div class="flex-price_property">
+                            <ul>
+                                <li>1 gb of space</li>
+                                <li>10 gb of bandwidth</li>
+                                <li>3 websites</li>
+                                <li>Basic Customization</li>
+                                <li>wordpress integration</li>
+                            </ul>
+                            
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="price_item">
+                    <ul class="price_item_block">
+
+                    </ul>
+
+                </div>
+
+                <div class="price_item">
+                    <ul class="price_item_block">
+
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="reviews">
+        <div class="container">
+            <div class="title">
+                <h3>WHAT OUR CUSTOMERS ARE SAYING</h3>
+                <div class="line"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="reviews_block">
+                <div class="reviews_item">
+
+                </div>
+
+
+                <div class="reviews_item">
+
+                </div>
+
+
+                <div class="reviews_item">
+
+                </div>
+
+            </div>
+        </div>
+
     </section>
 </body>
 
