добавка к new paragraph

--- a/index.html
+++ b/index.html
@@ -228,24 +228,64 @@
                                 <li>3 websites</li>
                                 <li>Basic Customization</li>
                                 <li>wordpress integration</li>
+                                <li>e mail support</li>
                             </ul>
-                            
+
                         </div>
                     </div>
 
                 </div>
 
                 <div class="price_item">
-                    <ul class="price_item_block">
-
-                    </ul>
-
+                    <div class="price_item_block">
+                        <h3>Professional</h3>
+                        <div class="price_line"></div>
+                        <span>
+                            <span class="currency">
+                                $
+                            </span>
+                            19
+                        </span>
+                        <p>Mounthly Payment</p>
+                        <div class="popular">
+                            Our Most Popular
+                        </div>
+                        <div class="flex-price_property">
+                            <ul>
+                                <li>5 gb of space</li>
+                                <li>50 gb of bandwidth</li>
+                                <li>12 websites</li>
+                                <li>Advanced Customization</li>
+                                <li>wordpress integration</li>
+                                <li>email support</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="price_item">
-                    <ul class="price_item_block">
+                    <div class="price_item_block">
+                        <h3>Enterprise</h3>
+                        <div class="price_line"></div>
+                        <span>
+                            <span class="currency">
+                                $
+                            </span>
+                            70
+                        </span>
+                        <p>Mounthly Payment</p>
+                        <div class="flex-price_property">
+                            <ul>
+                                <li>Unlimited space</li>
+                                <li>unlimited bandwidth</li>
+                                <li>100 websites</li>
+                                <li>Advanced Customization</li>
+                                <li>wordpress integration</li>
+                                <li>24/7 customer support</li>
+                            </ul>
 
-                    </ul>
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -259,19 +299,57 @@
                 <div class="line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="reviews_block">
+            <div class="flex-reviews_block">
                 <div class="reviews_item">
-
+                    <span>Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Doloribus
+                        accusamus expedita repellat similique
+                        odio aspernatur ex, architecto eaque
+                        quo suscipit.</span>
                 </div>
 
 
                 <div class="reviews_item">
-
+                    <span>Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Doloribus
+                        accusamus expedita repellat similique
+                        odio aspernatur ex, architecto eaque
+                        quo suscipit.</span>
                 </div>
 
 
                 <div class="reviews_item">
+                    <span>Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Doloribus
+                        accusamus expedita repellat similique
+                        odio aspernatur ex, architecto eaque
+                        quo suscipit.</span>
+                </div>
 
+            </div>
+            <div class="flex-people">
+                <div class="person">
+                    <img src="./img/avatar.png" alt="">
+                    <div class="person_item">
+                        <span>Jeremy H.</span>
+                        <p>Manager</p>
+                    </div>
+                </div>
+
+                <div class="person">
+                    <img src="./img/avatar.png" alt="">
+                    <div class="person_item">
+                        <span>John S.</span>
+                        <p>Freelancer</p>
+                    </div>
+                </div>
+
+                <div class="person">
+                    <img src="./img/avatar.png" alt="">
+                    <div class="person_item">
+                        <span>Susan H.</span>
+                        <p>Photogtapher</p>
+                    </div>
                 </div>
 
             </div>
